# GiuaKyLTHT_LEDUCANHVIET

./: CMakeLists.txt  README.md
include/: fileinfo.h  lsprogram.h  permissions.h  sorting.h  utils.h
src/: fileinfo.c  main.c  permissions.c  sorting.c  utils.c
